--- a/.github/workflows/update-visits.yml
+++ b/.github/workflows/update-visits.yml
@@ -36,4 +36,4 @@ jobs:
           git config --global user.email 'github-actions@github.com'
           git add visits.txt README.md
           git commit -m 'Update visits count'
-          git push
+          git push https://x-access-token:${{ secrets.VISITOR_PAT }}@github.com/sudoesjudo/automation.git
