--- a/.github/workflows/update-visits.yml
+++ b/.github/workflows/update-visits.yml
@@ -31,6 +31,8 @@ jobs:
           sed -i 's|!\[Visitors\](https://img.shields.io/badge/Visitors-.*-blue?style=social&logo=github)|'"$badge"'|' README.md
 
       - name: Commit changes
+        env:
+          GH_PAT: ${{ secrets.VISITOR_PAT }}
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
