--- a/.github/workflows/update-visits.yml
+++ b/.github/workflows/update-visits.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '*/5 * * * *' # Runs every 5 minutes
+    - cron: '*/15 * * * *' # Runs every 15 minutes
 
 jobs:
   update-visits:
@@ -27,8 +27,8 @@ jobs:
       - name: Update README.md
         run: |
           visits=${{ steps.increment.outputs.visits }}
-          badge="![Visitors](https://img.shields.io/badge/Visitors-$visits-blue?style=social&logo=github)"
-          sed -i 's|!\[Visitors\](https://img.shields.io/badge/Visitors-.*-blue?style=social&logo=github)|'"$badge"'|' README.md
+          badge="![Visits](https://img.shields.io/badge/Visits-$visits-blue?style=social&logo=github)"
+          sed -i 's|!\[Visits\](https://img.shields.io/badge/Visits-.*-blue?style=social&logo=github)|'"$badge"'|' README.md
 
       - name: Commit changes
         env:
@@ -38,4 +38,4 @@ jobs:
           git config --global user.email 'github-actions@github.com'
           git add visits.txt README.md
           git commit -m 'Update visits count'
-          git push https://x-access-token:${{ secrets.VISITOR_PAT }}@github.com/sudoesjudo/automation.git
+          git push https://x-access-token:${{ secrets.VISITOR_PAT }}@github.com/sudoesjudo/automation.git HEAD:main
