--- a/.github/workflows/update-visits.yml
+++ b/.github/workflows/update-visits.yml
@@ -1,8 +1,11 @@
 name: Update Visits
 
 on:
+  push:
+    branches:
+      - main
   schedule:
-    - cron: '*/15 * * * *' # Runs every 15 minutes
+    - cron: '*/5 * * * *' # Runs every 5 minutes
 
 jobs:
   update-visits:
@@ -10,7 +13,9 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Increment visit counter
         id: increment
@@ -24,15 +29,13 @@ jobs:
       - name: Update README.md
         run: |
           visits=${{ steps.increment.outputs.visits }}
-          badge="![Visitors](https://img.shields.io/badge/Visitors-$visits-blue?style=social&logo=github)"
-          sed -i 's|!\[Visitors\](https://img.shields.io/badge/Visitors-.*-blue?style=social&logo=github)|'"$badge"'|' README.md
+          badge="![Visits](https://img.shields.io/badge/Visits-$visits-blue)"
+          sed -i 's|!\[Visits\](https://img.shields.io/badge/Visits-.*-blue)|'"$badge"'|' README.md
 
       - name: Commit changes
-        env:
-          GH_PAT: ${{ secrets.VISITOR_PAT }}
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
           git add visits.txt README.md
           git commit -m 'Update visits count'
-          git push https://x-access-token:${{ secrets.VISITOR_PAT }}@github.com/sudoesjudo/automation.git HEAD:main
+          git push
