--- a/.github/workflows/update-visits.yml
+++ b/.github/workflows/update-visits.yml
@@ -1,9 +1,6 @@
 name: Update Visits
 
 on:
-  push:
-    branches:
-      - main
   schedule:
     - cron: '*/5 * * * *' # Runs every 5 minutes
 
@@ -14,8 +11,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Increment visit counter
         id: increment
@@ -29,8 +24,8 @@ jobs:
       - name: Update README.md
         run: |
           visits=${{ steps.increment.outputs.visits }}
-          badge="![Visits](https://img.shields.io/badge/Visits-$visits-blue)"
-          sed -i 's|!\[Visits\](https://img.shields.io/badge/Visits-.*-blue)|'"$badge"'|' README.md
+          badge="<a href=\"https://github.com/sudoesjudo/automation\"><img src=\"https://img.shields.io/badge/Visitors-$visits-blue?style=social&logo=github\" alt=\"Visitor Badge\"/></a>"
+          sed -i 's|<a href="https://github.com/sudoesjudo/automation"><img src="https://img.shields.io/badge/Visitors-.*-blue?style=social&logo=github" alt="Visitor Badge"/></a>|'"$badge"'|' README.md
 
       - name: Commit changes
         run: |
