--- a/.github/workflows/update-visits.yml
+++ b/.github/workflows/update-visits.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Update README.md
         run: |
           visits=${{ steps.increment.outputs.visits }}
-          badge="<a href=\"https://github.com/sudoesjudo/automation\"><img src=\"https://img.shields.io/badge/Visitors-$visits-blue?style=social&logo=github\" alt=\"Visitor Badge\"/></a>"
-          sed -i 's|<a href="https://github.com/sudoesjudo/automation"><img src="https://img.shields.io/badge/Visitors-.*-blue?style=social&logo=github" alt="Visitor Badge"/></a>|'"$badge"'|' README.md
+          badge="![Visits](https://img.shields.io/badge/Visits-$visits-blue)"
+          sed -i 's|!\[Visits\](https://img.shields.io/badge/Visits-.*-blue)|'"$badge"'|' README.md
 
       - name: Commit changes
         run: |
